--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,5 @@
 .nav-bar {
-  background: #4f4e4e; 
-  // background-color: red;
+  background-color: #343434; 
   width: 5rem; 
   height: 100%; 
   position: absolute; 
@@ -15,7 +14,37 @@
     img { 
       display: block; 
       margin: 8px auto; 
-      width: 24px;
+      width: 30px;
+      height: auto;
+      
+      &.sub-logo {
+        width: 65px; 
+      }
+    }
+  }
+  
+  nav {
+    display: block; 
+    text-align: center; 
+    position: absolute; 
+    height: 210px; 
+    top: 50%;
+    margin-top: -120px; 
+    width: 100%;
+   
+    a {
+      font-size: 22px;
+      color: #4d4d4e; 
+      display: block; 
+      line-height: 51px; 
+      height: 51px;  
+      position: relative; 
+      text-decoration: none;
+     
+
+      i {
+        transition: all 300ms ease-in-out; 
+      }
     }
   }
 }
