--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,49 +1,124 @@
 .nav-bar {
-  background-color: #343434; 
-  width: 5rem; 
-  height: 100%; 
-  position: absolute; 
-  top: 0; 
-  z-index: 3; 
+  background: #181818;
+  width: 60px;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 3;
   min-height: 500px;
 
   .logo {
-    display: block; 
-    padding: 8px 0; 
+    display: block;
+    padding: 8px 0;
 
-    img { 
-      display: block; 
-      margin: 8px auto; 
-      width: 30px;
+    img {
+      display: block;
+      margin: 8px auto;
+      width: 24px;
       height: auto;
-      
+
       &.sub-logo {
-        width: 65px; 
+        width: 50px;
       }
     }
   }
-  
+
   nav {
-    display: block; 
-    text-align: center; 
-    position: absolute; 
-    height: 210px; 
+    display: block;
+    text-align: center;
+    position: absolute;
+    height: 210px;
     top: 50%;
-    margin-top: -120px; 
+    margin-top: -120px;
     width: 100%;
-   
+
     a {
       font-size: 22px;
-      color: #4d4d4e; 
-      display: block; 
-      line-height: 51px; 
-      height: 51px;  
-      position: relative; 
+      color: #4d4d4e;
+      display: block;
+      line-height: 51px;
+      height: 51px;
+      position: relative;
       text-decoration: none;
-     
 
       i {
-        transition: all 300ms ease-in-out; 
+        transition: all 0.01s;
+      }
+
+      &:hover {
+        color: #ffd700;
+
+        svg {
+          opacity: 0;
+        }
+
+        &:after {
+          opacity: 1;
+        }
+      }
+
+      &:after {
+        content: '';
+        font-size: 9px;
+        letter-spacing: 2px;
+        position: absolute;
+        bottom: 0;
+        display: block;
+        width: 100%;
+        text-align: center;
+        opacity: 0;
+        -webkit-transition: all 0.3s ease-out;
+        transition: all 0.5s ease-out;
+      }
+
+      &:first-child {
+        &:after {
+          content: 'HOME';
+        }
+      }
+    }
+
+    a.about-link {
+      &:after {
+        content: 'ABOUT';
+      }
+    }
+
+    a.contact-link {
+      &:after {
+        content: 'CONTACT';
+      }
+    }
+
+    a.active {
+      svg {
+        color: #ffd700;
+      }
+    }
+  }
+
+  ul {
+    font-size: 1.5rem;
+    position: absolute;
+    bottom: 20px;
+    width: 100%;
+    display: block;
+    padding: 0;
+    list-style: none;
+    margin: 0;
+    text-align: center;
+
+    li {
+      a {
+        display: inline-block;
+        margin: 0 10px;
+        padding: 7px 0;
+        font-size: 1.5rem;
+        padding: 0.5rem;
+
+        &:hover svg {
+          color: #ffd700;
+        }
       }
     }
   }
