--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,11 @@ html {
 
 body {
   margin: 0;
-  font-family: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
-  color: #444; 
-  background: #022c43; 
+  font: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
+  color: rgb(243, 238, 238); 
   overflow: hidden;
   display: block;
+  background-color: #36454F;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
