--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -24,3 +24,19 @@
   margin-left: -35px; 
   margin-bottom: -20px; 
 }
+
+
+.container {
+  width: 100%; 
+  will-change: contents;
+  height: 90%; 
+  min-height: 566px; 
+  position: absolute;
+  opacity: 0; 
+  top: 10%; 
+  margin: 0 auto; 
+  z-index: 1; 
+  transform-style: preserve-3d;
+  animation: fadeIn 0.5s ease-in-out forwards;
+  animation-delay: 1s;  
+}
